<resources>
    <string name="app_name">MicroBlog</string>

    <string name="obtain_token_via_sso">SSO 授权（仅客户端）</string>
    <string name="obtain_token_via_web">SSO 授权（Web）</string>
    <string name="obtain_token_via_sso_all_in_one">SSO 授权（ALL IN ONE）</string>
    <string name="load">登录</string>
    <string name="obtain_token_via_signature">Web 授权</string>
    <string name="obtain_token_via_mobile">手机短信注册登录</string>
    <string name="obtain_token_via_quick_sso">通过微博客户端快速授权</string>
    <string name="obtain_token_via_code">通过 Code 获取 Token</string>
    <string name="obtain_token_logout">用户登出</string>
    <string name="token_info">Token 信息：</string>
    <string name="token_has_existed">Token 仍在有效期内，无需再次登录。</string>
    <string name="load_success">登录成功</string>
    <string name="obtain_token_hint"><b>请注意：</b>\n<li>SSO 登录需要微博客户端的支持，目前仅 3.0.0 及以上微博客户端版本支持 SSO；如果未安装，将自动转为 Oauth2.0 Web 授权认证（即第一种认证方式）</li>\n<li>如果您通过方式一和方式二获取不到 Token，而是获取到 code，那说明您的包名和签名存在问题，请到开放平台注册包名和签名。详情请查看 FAQ 文档</li></string>
    <string name="auth_success">授权成功</string>
    <string name="auth_canceled">取消授权</string>
    <string name="auth_failed">授权失败</string>
    <string name="token_to_string_format_1">Token：%1$s \n有效期：%2$s</string>
    <string name="share_success">分享成功</string>
    <string name="shengming">尊敬的用户，为确保您的账号安全，本应用将跳转到新浪微博官方登录接口，请确认应用授权。</string>


    <string name="user_name">爱尚益达</string>
    <string name="homepage">首页</string>
    <string name="message">消息</string>
    <string name="discover">发现</string>
    <string name="me">我</string>
    <string name="my_group">我的分组-----</string>
    <string name="other">其他---------</string>
    <string name="edit_my_group">编辑我的分组</string>
    <string name="find_group">发现群</string>
    <string name="search_linkman_group">搜索联系人和群</string>
    <string name="at_me">\@我的</string>
    <string name="comments">评论</string>
    <string name="note">便签</string>
    <string name="good">赞</string>
    <string name="sina_news">新浪新闻</string>
    <string name="yesterday">昨天</string>
    <string name="add_friend">添加好友</string>
    <string name="setting">设置</string>
    <string name="micro_blog">微博</string>
    <string name="attention">关注</string>
    <string name="fans">粉丝</string>
    <string name="font">文字</string>
    <string name="image">照片//视频</string>
    <string name="first_news">头条文章</string>
    <string name="game">游戏</string>
    <string name="sign">签到</string>
    <string name="comment">点评</string>
    <string name="more">更多</string>
    <string name="cancel">取消</string>
    <string name="publish_idea">发微博</string>
    <string name="send">发送</string>
    <string name="share_fresh">分享新鲜事...</string>
    <string name="please_comment">  请发表评论</string>
    <string name="max140">最大限制字数140</string>
    <string name="contents">我也不知道是什么鬼，就是用来测试的</string>
    <string name="protect_warning">您的账号处在高危状态，点此加强账号保护</string>
    <string name="record_title">人生最美好的是回忆曾经,写点什么吧···</string>
    <string name="edit_something">城市套路深，我要回农村。\n农村路又滑，人心更难察。</string>
    <string name="score">score</string>


    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

    <string name="pull_to_refresh_pull_label">下拉刷新…</string>
    <string name="pull_to_refresh_release_label">放开刷新…</string>
    <string name="pull_to_refresh_refreshing_label">正在载入…</string>

    <string name="click_download">点击下载</string>
    <string name="unload">退出当前账号</string>
    <string name="collect">收藏</string>

    <string name="pay">支付宝</string>
    <string name="dingding">钉钉</string>
    <string name="pengyouquan">朋友圈</string>
    <string name="haoyou">好友</string>
    <string name="laiwang">来往</string>
    <string name="mms">sms</string>


</resources>
