<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_column="3"
    android:layout_row="2">

    <ImageView
        android:id="@+id/portrait_message_list_view_item"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:layout_margin="5dp"
        android:layout_column="0"
        android:layout_row="0"
        android:layout_rowSpan="2"
        android:src="@mipmap/logo_sina"/>

    <TextView
        android:id="@+id/linkname_message_list_view_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:textSize="15sp"
        android:layout_column="1"
        android:layout_row="0"
        android:text="@string/sina_news"
        android:layout_rowWeight="1"
        />

    <TextView
        android:id="@+id/time_message_list_view_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:layout_column="2"
        android:layout_row="0"
        android:text="@string/yesterday"
        android:layout_gravity="right"
        android:layout_margin="15dp"
        />

    <TextView
        android:id="@+id/contents_message_list_view_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textSize="12sp"
        android:layout_column="1"
        android:layout_row="1"
        android:text="@string/contents"
        android:maxEms="16"
        android:singleLine="true"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/other_message_list_view_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:layout_row="1"
        />

</GridLayout>