<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white">

        <TextView
            android:id="@+id/btn_message_navigation_findgroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_text_button"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:text="@string/find_group"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/btn_message_navigation_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/message"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            />

        <ImageButton
            android:id="@+id/btn_message_navigation_new_chat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_message_navigation_new_chat"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/grey">

            <EditText
                android:id="@+id/edit_message_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:hint="@string/search_linkman_group"
                android:drawableLeft="@mipmap/navigationbar_search"
                android:textSize="12sp"
                android:background="@drawable/shape_edit" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/btn_message_contents_at_me"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/messagescenter_at"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/at_me"
                    android:layout_centerVertical="true"
                    android:textColor="@color/color_text_button"
                    android:layout_marginLeft="70dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="15dp"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/triangle"/>

            </RelativeLayout>

            <View
                android:layout_width="320dp"
                android:layout_height="1dp"
                android:layout_gravity="right"
                android:background="@color/grey"/>

            <RelativeLayout
                android:id="@+id/btn_message_contents_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/messagescenter_comments"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/comments"
                    android:textColor="@color/color_text_button"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="70dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="15dp"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/triangle"/>

            </RelativeLayout>

            <View
                android:layout_width="320dp"
                android:layout_height="1dp"
                android:layout_gravity="right"
                android:background="@color/grey"/>

            <RelativeLayout
                android:id="@+id/btn_message_contents_good"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@mipmap/messagescenter_good"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textColor="@color/color_text_button"
                    android:text="@string/good"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="70dp"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="15dp"
                    android:layout_centerVertical="true"
                    android:src="@mipmap/triangle"/>

            </RelativeLayout>


        </LinearLayout>

        <View
            android:layout_width="320dp"
            android:layout_height="1dp"
            android:layout_gravity="right"
            android:background="@color/grey"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ListView
                android:id="@+id/list_view_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



            </ListView>




        </LinearLayout>




    </LinearLayout>

</LinearLayout>